2007-05-13	Michael Riepe  <too-tired@users.sourceforge.net>

	* lavfmuxer.cpp: include patch from Wolfram Gloger.

	* when using the mouse wheel, limit position to [0...pictures-1].

2007-05-09  Sven Over  <svenover@svenover.de>

	* Added generic dvbcut_exception class.

	* Got rid of libavcodec usage in playaudio.cpp. Instead, libmad and
	liba52 are now used. SCons files changed accordingly.

2007-05-06	Michael Riepe  <too-tired@users.sourceforge.net>

	* remember last used export format.

2007-05-03	Michael Riepe  <too-tired@users.sourceforge.net>

	* src/mpgfile.cpp: print estimated data rate.

	* strc/index.cpp: changed additional error messages.

2007-04-29	Michael Riepe  <too-tired@users.sourceforge.net>

	* Changed export accelerator to 'E'.

2007-04-13  Sven Over  <svenover@svenover.de>

	* Released version 0.5.4.

2007-03-06	Michael Riepe  <too-tired@users.sourceforge.net>

	* Report missing frames in GOP while indexing.

2007-02-12	Michael Riepe  <too-tired@users.sourceforge.net>

	* Write proper GOP time_code values when exporting.

2007-01-30	Michael Riepe  <too-tired@users.sourceforge.net>

	* Added workaround for div/0 bug in ffmpeg.

	* Added missing ChangeLog entry. :-)

2007-01-28  Sven Over  <svenover@svenover.de>

	* Applied patch for SConstruct file by Ingo Saitz, as forwarded to me
	by Christian Marillat.

	* Fixed 2 compiler warnings in mpegmuxer.cpp.

	* Christian Marillat reported build problems on alpha, where the
	__bswap_constant_xx macros seem not to be available. Changed defines
	in defines.h not to use them anymore.

2007-01-26	Michael Riepe  <too-tired@users.sourceforge.net>

	* Integrated Windows port by Olivier Raoul.

	* Added XML generation feature by Ralph Glasstetter.

2006-09-24  Michael Riepe  <too-tired@users.sourceforge.net>

	* Moved global settings to a separate class.

	* Changed jog_offset to type double. The default is now 0.4.

	* Updated ChangeLog ;-)

	* Added configurable jog slider patch from Ralph Glasstetter.
